updates, added style sheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<html>
+<head>
+	<title>DrewMcArthur.io</title>
+	<link rel="stylesheet" type="text/css" href="/style.css"/>
+</head>
+<body>
+	<div class="main">
+		<div class="header">
+		</div>
+		<div class="body">
+			Hello World
+			My name is Drew McArthur
+			<span class="smelly">Rebecca smells</span>
+		</div>
+		<div class="footer">
+		</div>
+	</div>
+</body>
+</html>
