added js, jquery, header, and footer

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <head>
 	<title>DrewMcArthur.io</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="main">
-		<div class="header">
+		<div id="header">
 		</div>
-		<div class="body">
+		<div id="body">
 			Hello World
 			My name is Drew McArthur
 			<span class="smelly">Rebecca smells</span>
 		</div>
-		<div class="footer">
+		<div id="footer">
 		</div>
 	</div>
 </body>
