added links and images

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,4 +1,8 @@
-<div class="drewmcarthur">
-	drewmcarthur.io
-</div>
-
+<a href="/">
+	<div class="drewmcarthur">
+		drewmcarthur.io
+	</div>
+</a>
+<a href="https://github.com/DrewMcArthur">
+	<img src="/media/github-icon.png" class="footer-link github"/>
+</a>
