--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <head>
 	<title>DrewMcArthur.io</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<div class="main">
+	<div class="wrapper">
 		<div id="header">
+			<!-- This is loaded from /pages/header.html -->
 		</div>
-		<div id="body">
-			Hello World
-			My name is Drew McArthur
-			<span class="smelly">Rebecca smells</span>
+		<div id="main">
+			Hello World, my name is Drew McArthur.
 		</div>
 		<div id="footer">
+			<!-- This is loaded from /pages/footer.html -->
 		</div>
 	</div>
 </body>
