added cool scrolling

--- a/index.html
+++ b/index.html
@@ -109,9 +109,132 @@
 			This is a filler div to see what happens when I scroll
 			This is a filler div to see what happens when I scroll
 			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
+			This is a filler div to see what happens when I scroll
 		</div>
 		</div>
-		<div id="footer">
+		<div id="footer" class="mini">
 			<!-- This is loaded from /pages/footer.html -->
 		</div>
 	</div>
