--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>DrewMcArthur.io</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
