--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 			<!-- This is loaded from /pages/header.html -->
 		</div>
 		<div id="main">
-		
+			<h1>Time left until iPhone 6 is available for preorder</h1>
+			<br>
+			<div class="countdown"></div>		
 		</div>
 		<div id="footer" class="mini">
 			<!-- This is loaded from /pages/footer.html -->
