--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.5/less.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet/less" type="text/css" href="styles.less" />
 </head>
 <body>
 	<div class="wrapper">
