--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script>
+		less = {
+    			env: "development",
+    			logLevel: 2,
+    			async: false,
+    			fileAsync: false,
+    			poll: 1000,
+    			functions: {},
+    			dumpLineNumbers: "comments",
+    			relativeUrls: false,
+    			globalVars: {
+      				var1: '"string value"',
+      				var2: 'regular value'
+			},
+    			rootpath: ":/a.com/"
+  		};
+	</script>
+	<script src="less.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.5/less.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
