--- a/index.html
+++ b/index.html
@@ -2,43 +2,21 @@
 <head>
 	<title>DrewMcArthur.io</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
-	<link rel="stylesheet/less" type="text/css" href="style.less" />
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script>
-		less = {
-    			env: "development",
-    			logLevel: 2,
-    			async: false,
-    			fileAsync: false,
-    			poll: 1000,
-    			functions: {},
-    			dumpLineNumbers: "comments",
-    			relativeUrls: false,
-    			globalVars: {
-      				var1: '"string value"',
-      				var2: 'regular value'
-			},
-    			rootpath: ":/a.com/"
-  		};
-	</script>
-	<script src="less.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<div class="wrapper">
-		<div id="header">
-			<!-- This is loaded from /pages/header.html -->
-		</div>
-		<div id="main">
-			<h1>Time left until iPhone 6 is available for preorder</h1>
-			<br>
-			<div class="countdown"></div>		
-		</div>
-		<div id="footer" class="mini">
-			<!-- This is loaded from /pages/footer.html -->
-		</div>
-	</div>
+  <div class='main'>
+    <div>Drew McArthur</div>
+    <div>
+      <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
+    </div>
+    <div class='social'>@DrewDiezel </div>
+    <div class='social'>
+      <a href='https://twitter.com/DrewDiezel'>Twitter</a>
+    </div>
+  </div>
 </body>
 </html>
