--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>DrewMcArthur.io</title>
+	<title>McArthur.in</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
