--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>McArthur.in</title>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/social-icons.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
@@ -13,9 +14,15 @@
     <div>
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
-    <div class='social'>@DrewDiezel </div>
-    <div class='social'>
-      <a href='https://twitter.com/DrewDiezel'>Twitter</a>
+    <div class="footer-social-icons">
+        <div>Follow me:</div>
+        <ul class="social-icons">
+            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+        </ul>
     </div>
   </div>
 </body>
