--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
     <div>
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
-    <div class="footer-social-icons">
-        <div>Follow me:</div>
-        <ul class="social-icons">
-            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-        </ul>
-    </div>
+    <div>Follow me:</div>
+    <ul class="social-icons">
+        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+        <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
+    </ul>
   </div>
 </body>
 </html>
