added links and adjusted spacing

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <div>
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
-    <div>Follow me:</div>
     <ul class="social-icons">
-        <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
         <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
