--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>McArthur.in</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="canonical" href="https://mcarthur.in"/>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/social-icons.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
