--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <html>
 <head>
 	<title>McArthur.in</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="canonical" href="https://mcarthur.in"/>
+  <meta name="viewport" content="width=device-width">
+  <link rel="canonical" href="https://mcarthur.in"/>
 	<link rel="stylesheet" type="text/css" href="/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/social-icons.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="script.js"></script>
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-      gtag('config', 'UA-107580118-1');
-    </script>
+    gtag('config', 'UA-107580118-1');
+  </script>
 </head>
 <body>
   <div class='main'>
@@ -26,12 +28,12 @@
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
     <ul class="social-icons">
-        <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> <i class="fa fa-snapchat-ghost"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
+      <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> <i class="fa fa-snapchat-ghost"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
 </body>
