javascript progressive loading, scale at 1.05

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/social-icons.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,400italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<!--<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>-->
 	<script type="text/javascript" src="script.js"></script>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
@@ -20,6 +20,7 @@
   </script>
 </head>
 <body>
+  <div id='tiny_bg'></div>
   <div class='main'>
     <div>Drew McArthur</div>
     <div>
