--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
-  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+  <!-- <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script> -->
 	<script type="text/javascript" src="script.js"></script>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
