--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!doctype html>
 <html>
 <head>
-	<title>McArthur.in</title>
-  <meta name="viewport" content="width=device-width">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,intial-scale=1">
   <link rel="canonical" href="https://mcarthur.in"/>
-	<link rel="stylesheet" type="text/css" href="/style.css"/>
-	<link rel="stylesheet" type="text/css" href="/social-icons.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="/style.css"/>
+  <link rel="stylesheet" type="text/css" href="/social-icons.css"/>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <title>McArthur.in</title>
 </head>
 <body>
   <div class='bg_wrapper'>
@@ -26,15 +28,13 @@
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
-  <!-- <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script> -->
-	<script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-107580118-1');
   </script>
 </body>
