--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
   </div>
   <div class='main'>
     <div>Drew McArthur</div>
-    <div>
-      <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
-    </div>
+    <ul class="pro-icons">
+      <li><a href="mailto:drew@mcarthur.in" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
+      <li><a href="/resume.pdf" class="social-icon"> <i class="fa fa-file-text"></i></a></li>
+    </ul>
     <ul class="social-icons">
       <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
       <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
       <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
       <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> <i class="fa fa-snapchat-ghost"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
   <script type="text/javascript" src="script.js"></script>
