--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/style.css"/>
   <link rel="stylesheet" type="text/css" href="/social-icons.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-  <title>McArthur.in</title>
+  <title>mcarthur.in</title>
 </head>
 <body>
   <div class='bg_wrapper'>
