consolidated css into one file

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,intial-scale=1">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="canonical" href="https://mcarthur.in"/>
   <link rel="stylesheet" type="text/css" href="/style.css"/>
-  <link rel="stylesheet" type="text/css" href="/social-icons.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <title>mcarthur.in</title>
 </head>
@@ -20,12 +19,18 @@
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
     <ul class="social-icons">
-      <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-      <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-      <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-      <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> <i class="fa fa-snapchat-ghost"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> <i class="fa fa-github"></i></a></li>
+      <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
+        <i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> 
+        <i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> 
+        <i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
+        <i class="fa fa-snapchat-ghost"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> 
+        <i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
+        <i class="fa fa-github"></i></a></li>
     </ul>
   </div>
   <script type="text/javascript" src="script.js"></script>
