update linkedin profile link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <i class="fa fa-twitter"></i></a></li>
       <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> 
+      <li><a href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-github"></i></a></li>
