--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <i class="fa fa-twitter"></i></a></li>
       <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
+      <li><a href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
+        <i class="fa fa-vimeo"></i></a></li>
       <li><a href="https://www.linkedin.com/in/drew-mcarthur-63a3199b/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
