--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="canonical" href="https://mcarthur.in"/>
+  <link rel="apple-touch-startup-image" href="/assets/tiny_centered_bg.jpg">
   <link rel="stylesheet" type="text/css" href="/style.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <title>mcarthur.in</title>
