--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/style.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <title>mcarthur.in</title>
+  <script src="https://use.fontawesome.com/03087e1a79.js"></script>
 </head>
 <body>
   <div class='bg_wrapper'>
@@ -20,6 +21,8 @@
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
     <ul class="social-icons">
+      <li><a href="/#contact" class="social-icon"> 
+        <i class="fa fa-address-card"></i></a></li>
       <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
       <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> 
