contact card looks nice, no functionality though

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
     </div>
     <ul class="social-icons">
-      <li><a href="/#contact" class="social-icon"> 
-        <i class="fa fa-address-card"></i></a></li>
       <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
       <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> 
@@ -31,13 +29,24 @@
         <i class="fa fa-twitter"></i></a></li>
       <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
+    </ul>
+    <ul class="social-icons">
       <li><a href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
         <i class="fa fa-vimeo"></i></a></li>
       <li><a href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-github"></i></a></li>
+      <li><a href="/#contact" class="social-icon"> 
+        <i class="fa fa-address-card"></i></a></li>
     </ul>
+  </div>
+  <div class='vcard'>
+    <div class='photo'></div>
+    <div class='name'>Drew McArthur</div>
+    <div class='email'><a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a></div>
+    <div class='phone us'><a href='tel:+15085429811'>+1 (508) 542 9811</a></div>
+    <div class='phone dk'><a href='tel:+4561406658'>+45 61 40 66 58</a></div>
   </div>
   <script type="text/javascript" src="script.js"></script>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
