--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <title>mcarthur.in</title>
   <script src="https://use.fontawesome.com/03087e1a79.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <div class='bg_wrapper'>
@@ -17,9 +18,6 @@
   </div>
   <div class='main'>
     <div>Drew McArthur</div>
-    <div>
-      <a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a>
-    </div>
     <ul class="social-icons">
       <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
@@ -30,25 +28,28 @@
       <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
     </ul>
-    <ul class="social-icons">
+    <ul class="social-icons two">
       <li><a href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
         <i class="fa fa-vimeo"></i></a></li>
       <li><a href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
       <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-github"></i></a></li>
-      <li><a href="/#contact" class="social-icon"> 
+      <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
   </div>
   <div class='vcard'>
     <div class='photo'></div>
+    <div class='dl-btn'><svg width="70" height="55" preserveAspectRatio="none">
+  <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill=none stroke="black" stroke-width="2" />
+</svg></div>
+    <div class='x-btn'> <i class='fa fa-close'></i></div>
     <div class='name'>Drew McArthur</div>
     <div class='email'><a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a></div>
     <div class='phone us'><a href='tel:+15085429811'>+1 (508) 542 9811</a></div>
     <div class='phone dk'><a href='tel:+4561406658'>+45 61 40 66 58</a></div>
   </div>
-  <script type="text/javascript" src="script.js"></script>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
   <script>
