--- a/index.html
+++ b/index.html
@@ -40,15 +40,21 @@
     </ul>
   </div>
   <div class='vcard'>
-    <div class='photo'></div>
-    <div class='dl-btn'><svg width="70" height="55" preserveAspectRatio="none">
-  <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill=none stroke="black" stroke-width="2" />
-</svg></div>
-    <div class='x-btn'> <i class='fa fa-close'></i></div>
-    <div class='name'>Drew McArthur</div>
-    <div class='email'><a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a></div>
-    <div class='phone us'><a href='tel:+15085429811'>+1 (508) 542 9811</a></div>
-    <div class='phone dk'><a href='tel:+4561406658'>+45 61 40 66 58</a></div>
+    <div class='icons'>
+      <div class='photo'></div>
+      <div class='dl-btn'><a href='/assets/Drew McArthur.vcf'>
+        <svg width="50" height="55" preserveAspectRatio="none">
+          <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill=none stroke="black" stroke-width="2" />
+        </svg>
+      </a></div>
+      <div class='x-btn'></div>
+    </div>
+    <div class='text'>
+      <div class='name'>Drew McArthur</div>
+      <div class='email'><a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a></div>
+      <div class='phone us'><a href='tel:+15085429811'>+1 (508) 542 9811</a></div>
+      <div class='phone dk'><a href='tel:+4561406658'>+45 61 40 66 58</a></div>
+    </div>
   </div>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
