new link to contact image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="canonical" href="https://mcarthur.in"/>
   <link rel="apple-touch-startup-image" href="/assets/tiny_centered_bg.jpg">
+  <link rel="apple-touch-icon" href="/assets/logo.png">
   <link rel="stylesheet" type="text/css" href="/style.css"/>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
   <title>mcarthur.in</title>
@@ -41,7 +42,7 @@
   </div>
   <div class='vcard'>
     <div class='icons'>
-      <div class='photo'></div>
+      <div class='photo'><img src='/assets/logo.png'/></div>
       <div class='dl-btn'><a href='/assets/Drew McArthur.vcf'>
         <svg width="50" height="55" preserveAspectRatio="none">
           <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill=none stroke="black" stroke-width="2" />
