added size transition to .vcard .dl-btn, increased name's text size.  still need to check that doesn't affect positioning

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id='bg'></div>
   </div>
   <div class='main'>
-    <div>Drew McArthur</div>
+    <div class='name'>Drew McArthur</div>
     <ul class="social-icons">
       <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
