--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class='photo'><img src='/assets/logo.png'/></div>
       <div class='dl-btn'><a href='/assets/Drew McArthur.vcf'>
         <svg width="25" height="30" preserveAspectRatio="none">
-          <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill=none stroke="black" stroke-width="2" />
+          <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill="#777" stroke="#777" stroke-width="2" />
         </svg>
       </a></div>
     </div>
