--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
   <div class='main'>
     <div class='name'>Drew McArthur</div>
     <ul class="social-icons">
-      <li><a href="https://www.facebook.com/drewdiezel" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
-      <li><a href="https://www.instagram.com/drewdiezel" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-instagram"></i></a></li>
-      <li><a href="https://twitter.com/DrewDiezel" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/DrewDiezel" class="social-icon"> 
         <i class="fa fa-twitter"></i></a></li>
-      <li><a href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
     </ul>
     <ul class="social-icons two">
-      <li><a href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
         <i class="fa fa-vimeo"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
-      <li><a href="https://github.com/DrewMcArthur" class="social-icon"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-github"></i></a></li>
-      <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
+      <li><a target="_blank" rel="noopener noreferrer" href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
   </div>
