fixed contact card bug from new tab links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <i class="fa fa-linkedin"></i></a></li>
       <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-github"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="/#contact" class="social-icon" onclick="showVcard()"> 
+      <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
   </div>
