--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class='main'>
     <div class='name'>Drew McArthur</div>
-    <ul class="social-icons">
+    <ul class="social-icons" onmousemove="onHover(event)" onmouseleave="hideBar()">
       <li><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
       <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
@@ -37,6 +37,7 @@
       <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
+    <div id='hoverbar'></div>
   </div>
   <div class='vcard'>
     <div class='icons'>
