--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <i class="fa fa-vimeo"></i></a></li>
       <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/DrewMcArthur" class="social-icon"> 
-        <i class="fa fa-github"></i></a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
+        <i class="fa fa-gitlab"></i></a></li>
       <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
