--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
   <div class='main'>
     <div class='name'>Drew McArthur</div>
     <ul id="social-icons" class="social-icons">
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
+      <li class='facebook'><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-facebook"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
+      <li class='instagram'><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
         <i class="fa fa-instagram"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/DrewDiezel" class="social-icon"> 
+      <li class='twitter'><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/DrewDiezel" class="social-icon"> 
         <i class="fa fa-twitter"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
+      <li class='snapchat'><a target="_blank" rel="noopener noreferrer" href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
         <i class="fa fa-snapchat-ghost"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
+      <li class='venmo'><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
         <i class="fa fa-vimeo"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
+      <li class='linkedin'><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fa fa-linkedin"></i></a></li>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
+      <li class='gitlab'><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-gitlab"></i></a></li>
-      <li><a href="/#contact" class="social-icon" onclick="showVcard()"> 
+      <li class='contact'><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fa fa-address-card"></i></a></li>
     </ul>
     <div id='hoverbar'></div>
