--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li class='gitlab'><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
         <i class="fa fa-gitlab"></i></a></li>
       <li class='contact'><a href="/#contact" class="social-icon" onclick="showVcard()"> 
-        <i class="fa fa-address-card"></i></a></li>
+        <i class="fas fa-phone"></i></a></li>
     </ul>
     <div id='hoverbar'></div>
   </div>
