--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <div class='name'>Drew McArthur</div>
     <ul id="social-icons" class="social-icons">
       <li class='facebook'><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
-        <i class="fas fa-facebook"></i></a></li>
+        <i class="fab fa-facebook"></i></a></li>
       <li class='instagram'><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
-        <i class="fas fa-instagram"></i></a></li>
+        <i class="fab fa-instagram"></i></a></li>
       <li class='snapchat'><a target="_blank" rel="noopener noreferrer" href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
-        <i class="fas fa-snapchat-ghost"></i></a></li>
+        <i class="fab fa-snapchat-ghost"></i></a></li>
       <li class='twitter'><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/DrewDiezel" class="social-icon"> 
-        <i class="fas fa-twitter"></i></a></li>
+        <i class="fab fa-twitter"></i></a></li>
       <li class='venmo'><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
-        <i class="fas fa-vimeo"></i></a></li>
+        <i class="fab fa-vimeo"></i></a></li>
       <li class='linkedin'><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
-        <i class="fas fa-linkedin"></i></a></li>
+        <i class="fab fa-linkedin"></i></a></li>
       <li class='gitlab'><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
-        <i class="fas fa-gitlab"></i></a></li>
+        <i class="fab fa-gitlab"></i></a></li>
       <li class='contact'><a href="/#contact" class="social-icon" onclick="showVcard()"> 
         <i class="fas fa-phone"></i></a></li>
     </ul>
