meh can't get email to show up

--- a/index.html
+++ b/index.html
@@ -19,42 +19,22 @@
   <div class='main'>
     <div class='name'>Drew McArthur</div>
     <ul id="social-icons" class="social-icons">
-      <li class='facebook'><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/drewdiezel" class="social-icon"> 
-        <i class="fab fa-facebook"></i></a></li>
       <li class='instagram'><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/drewdiezel" class="social-icon"> 
         <i class="fab fa-instagram"></i></a></li>
-      <li class='snapchat'><a target="_blank" rel="noopener noreferrer" href="https://snapchat.com/add/DrewDiezel" class="social-icon"> 
-        <i class="fab fa-snapchat-ghost"></i></a></li>
+      <li class='email'><a target="_blank" rel="noopener noreferrer" href="mailto:drew@mcarthur.in">
+        󰇰</a></li>
       <li class='twitter'><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/DrewDiezel" class="social-icon"> 
         <i class="fab fa-twitter"></i></a></li>
-      <li class='venmo'><a target="_blank" rel="noopener noreferrer" href="https://venmo.com/code?user_id=1877843277512704090" class="social-icon"> 
-        <i class="fab fa-vimeo"></i></a></li>
       <li class='linkedin'><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/drewmcarthur/" class="social-icon"> 
         <i class="fab fa-linkedin"></i></a></li>
+      <li class='github'><a target="_blank" rel="noopener noreferrer" href="https://github.com/DrewMcArthur" class="social-icon"> 
+        <i class="fab fa-github"></i></a></li>
       <li class='gitlab'><a target="_blank" rel="noopener noreferrer" href="https://gitlab.com/DrewMcArthur" class="social-icon"> 
         <i class="fab fa-gitlab"></i></a></li>
-      <li class='contact'><a href="/#contact" class="social-icon" onclick="showVcard()"> 
-        <i class="fas fa-phone"></i></a></li>
+      <li class="telegram"><a target="_blank" rel="noopener noreferrer" href="https://t.me/DrewMcArthur" class="social-icon">
+        <i class="fab fa-telegram"></i></a></li>
     </ul>
     <div id='hoverbar'></div>
-  </div>
-  <div class='vcard'>
-    <div class='icons'>
-      <div class='photo'><img src='/assets/logo.png'/></div>
-      <div class='dl-btn'><a href='/assets/Drew McArthur.vcf'>
-        <i class="fa fa-file-download"></i>
-        <!--
-        <svg width="25" height="30" preserveAspectRatio="none">
-          <path d="M25,40 l-16,-20 l11,0 l0,-15 l10,0 l0,15 l11,0 Z m0,6 l-8,-10 l-12,0 l0,15 l40,0 l0,-15 l-12,0 l-8,10" fill="#666" stroke="#666" stroke-width="2" />
-        </svg>
-        -->
-      </a></div>
-    </div>
-    <div class='text'>
-      <div class='name'>Drew McArthur</div>
-      <div class='email'><a href='mailto:drew@mcarthur.in'>drew@mcarthur.in</a></div>
-      <div class='phone us'><a href='tel:+15085429811'>+1 (508) 542 9811</a></div>
-    </div>
   </div>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107580118-1"></script>
