--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; URL=https://drewmca.dev" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="canonical" href="https://mcarthur.in"/>
   <link rel="apple-touch-startup-image" href="/assets/tiny_centered_bg.jpg">
